--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "alea": "^1.0.1",
     "jimp": "^0.16.2",
     "next": "latest",
+    "node-fetch": "^3.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "simplex-noise": "^4.0.0"
